Add new SVG icons for GitHub, download, email, and WhatsApp
- Added GitHub Invertocat icon (GitHub_Invertocat_Black.svg)
- Added download icon (download.svg)
- Added email icon (email.svg)
- Added GitHub logo icon (github.svg)
- Added WhatsApp icon (whatsapp.svg)

--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
             <!-- Contacto -->
             <div class="header-contact">
                 <div class="contact-item" onclick="openCopyModal('+52 33 1574 5851')">
-                    <span class="icon">📱</span>
+                    <img src="images/whatsapp.svg" alt="WhatsApp" class="contact-icon">
                     <span>+52 33 1574 5851</span>
                 </div>
                 <div class="contact-item" onclick="openCopyModal('metalbuckets@outlook.com')">
-                    <span class="icon">✉️</span>
+                    <img src="images/email.svg" alt="Email" class="contact-icon">
                     <span>metalbuckets@outlook.com</span>
                 </div>
+                <a href="https://github.com/Alan-Ixtlahuaca" target="_blank" class="contact-item">
+                    <img src="images/github.svg" alt="GitHub" class="contact-icon">
+                    <span>GitHub</span>
+                </a>
+                <a href="Micv\Curriculum Alan.pdf" download class="contact-item">
+                    <img src="images/download.svg" alt="Descargar CV" class="contact-icon">
+                    <span>Descargar CV</span>
+                </a>
             </div>
 
             <!-- Navegación -->
